kubernetes/resources/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: <NAMESPACE>
  labels:
    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
