kubernetes/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: <APP>
  namespace: <NAMESPACE>
spec:
  selector:
    app: MYAPP
  type: ClusterIP
  ports:
  - name: MYAPP
    protocol: TCP
    port: 8080
    targetPort: 8080
